fix music page alignment

--- a/src/app/music/index.module.css
+++ b/src/app/music/index.module.css
@@ -19,4 +19,8 @@
     justify-content: space-around;
     padding: 1rem;
   }
+
+  .compositions {
+    
+  }
 }
